--- a/ticket-project/src/pages/App.css
+++ b/ticket-project/src/pages/App.css
@@ -14,29 +14,34 @@
 } */
 
 .App-header {
-  background-color: #282c34;
+  background-color: white;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: calc(6px + 2vmin);
+  color: rgb(41, 32, 32);
 }
 
 .App-link {
-  color: #61dafb;
+  color: rgb(41, 32, 32);
   padding: 10px;
   text-decoration: none;
-  border: 1px solid #61dafb;
+  border: 1px solid #e04956;
   border-radius: 10px;
 }
 
-.main {
+.Links {
   display: flex;
   flex-direction: row;
   gap: 10px;
   margin-top: 50px;
+}
+
+.Links :hover {
+  background-color: #e04956;
+  color: white;
 }
 
 @keyframes App-logo-spin {
