--- a/ticket-project/src/pages/App.css
+++ b/ticket-project/src/pages/App.css
@@ -36,7 +36,7 @@
   display: flex;
   flex-direction: row;
   gap: 10px;
-  margin-top: 50px;
+  margin-top: 15px;
 }
 
 .Links :hover {
@@ -58,11 +58,12 @@
   flex-direction: column;
   width: 75%;
   margin: auto;
-  margin-top: 50px;
-  padding: 30px;
-  border: 1px solid #e04956;
+  padding: 10px;
   align-items: center;
   justify-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+  margin-top: 20px;
 }
 
 .image {
@@ -71,5 +72,78 @@
 }
 
 .ticket {
-  margin-top: 100px;
+  margin-top: 10px;
+}
+
+.ticket-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  justify-items: center;
+  width: 230px;
+}
+
+.ticket-input {
+  width: 100%;
+  height: 40px;
+  border-radius: 5px;
+  margin-bottom: 20px;
+  border: 1px solid #685f60;
+  line-height: 40px;
+  padding: 5px;
+  font-size: 18px;
+  outline: none;
+}
+
+.ticket-span {
+  display: flex;
+  padding: 8px;
+  padding-left: 0;
+  align-self: flex-start ;
+  font-weight: 600;
+}
+
+.ticket-message {
+  width: 100%;
+  height: 200px;
+  border-radius: 5px;
+  margin-bottom: 20px;
+  padding: 5px;
+  padding-top: 15px;
+  border: 1px solid #685f60;
+  font-size: 18px;
+  resize: none;
+  outline: none;
+}
+
+.ticket-error {
+  display: flex;
+  align-self: flex-start;
+  color: #e04956;
+  font-weight: 900;
+  font-size: 12px;
+  padding-bottom: 10px;
+}
+
+.submit {
+  display: flex;
+  align-self: flex-end;
+  color: white;
+  padding: 10px;
+  text-decoration: none;
+  border: 1px solid #e04956;
+  border-radius: 10px;
+  cursor: pointer;
+  background-color: #e04956;
+}
+ 
+::placeholder {
+  font-size: 14px;
+}
+
+@media (min-width: 426px) {
+  .ticket-form {
+    width: 450px;
+  }
 }
