--- a/ticket-project/src/pages/App.css
+++ b/ticket-project/src/pages/App.css
@@ -7,12 +7,6 @@
   pointer-events: none;
 }
 
-/* @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-} */
-
 .App-header {
   background-color: white;
   min-height: 100vh;
@@ -154,6 +148,48 @@
   font-size: 13px;
 }
 
+.lists {
+  display: grid;
+  padding: 10px;
+  grid-template-columns: repeat(1, 1fr);
+  justify-content: center;
+  align-items: center;
+  justify-items: center;
+  margin: auto;
+  margin-top: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
+  gap: 30px;
+}
+
+.ticket-detail {
+  display: flex;
+  flex-direction: column;
+  width: 94%;
+  border: 1px solid #b9b5b5;
+  padding: 10px 10px 30px 20px;
+  border-radius: 10px;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.4));
+}
+
+.ticket-detail :hover {
+   cursor: pointer;
+}
+
+.cart-logo {
+  display: flex;
+  align-self: flex-end;
+  width: 120px;
+}
+
+.list-page {
+  display: grid;
+  grid-template-columns: repeat(1,1fr);
+  align-items: center;
+  justify-content: center;
+  justify-items: center;
+}
+
 @media (min-width: 426px) {
   .ticket-form {
     width: 450px;
@@ -162,5 +198,9 @@
   .submit {
     display: flex;
     align-self: flex-end;
+  }
+
+  .lists {
+    grid-template-columns: repeat(3, 1fr);
   }
 }
